# CppSpecialization

./: .gitignore  README.md
Red_belt/: CMakeLists.txt
Red_belt/Profile/: profile.h
Red_belt/TestRunner/: test_runner.cpp  test_runner.h
Red_belt/Week_1/: CMakeLists.txt  LOG_MACRO.cpp  Paginator.cpp  Table.cpp  Yellow_belt_check.cpp
Red_belt/Week_1/AviaScanner/: SORT_BY.cpp  UPDATE_FIELD.cpp
Red_belt/Week_1/MACROs/: CMakeLists.txt  UNIQ_ID.cpp
Red_belt/Week_1/class_templates/: CMakeLists.txt  MyDeque.cpp  Paginator.i
Red_belt/Week_1/class_templates/lectures/: 2_GeneratingFunctions.cpp
Red_belt/Week_1/lectures/: 1_ClassTemplates.cpp  3_Cpp17Features.cpp  FinalClassTemplates.cpp  MacrosIntro.cpp
Red_belt/Week_1/rational/: Rational.cpp  RationalTestMain.cpp  RationalUT.cpp
Red_belt/Week_2/: CMakeLists.txt
Red_belt/Week_2/code_optimization/lectures/: input.txt
Red_belt/my_print/: CMakeLists.txt
Red_belt/profile/: CMakeLists.txt
Red_belt/test_runner/: test_runner.h
Red_belt/week_1/: CMakeLists.txt
Red_belt/week_1/MACROs/: CMakeLists.txt
Red_belt/week_1/MACROs/avia_scanner/: airline_ticket.h
Red_belt/week_1/MACROs/lectures/: macros_intro.cpp
Red_belt/week_1/class_templates/: CMakeLists.txt  paginator.i
Red_belt/week_1/rational/: rational.cpp  rational.h  rational_UT.cpp  rational_main.cpp
Red_belt/week_2/: CMakeLists.txt
Red_belt/week_2/algo_complexity/: 0_compl_intro.cpp  CMakeLists.txt  booking.cpp  e_book.cpp  express.cpp
Red_belt/week_2/algo_complexity/lectures/: 0_compl_intro.cpp  1_NH_with_notes.cpp  2_amortize_constant.cpp
Red_belt/week_2/code_optimization/: CMakeLists.txt  learner.cpp  sort_students.cpp  student.h
Red_belt/week_2/code_optimization/lectures/: 0_optimization_intro.cpp  1_measure.cpp  2_measure.cpp  create_input.cpp  measure_input.txt
Red_belt/week_2/effective_iostream/: CMakeLists.txt  io_input.txt  iostream_buffering.cpp
Red_belt/week_3/: CMakeLists.txt
Red_belt/week_3/memory_system/: CMakeLists.txt  linked_list.cpp  object_pool.cpp  swap_sort_copy.cpp
Red_belt/week_3/memory_system/lectures/: 0_new_operator.cpp  1_delete_operator.cpp  2_NewDelete_for_arrays.cpp  3_ptrs_arithmetics.cpp  4_begin_end_in_vector.cpp  5_const_const_ptr.cpp  SimpleVectorFinal.cpp
Red_belt/week_3/memory_system/simple_vector/: simple_vector.h
White_belt/: CMakeLists.txt
White_belt/Week_1/: A_div_B.cpp  A_plus_B.cpp  BinPres.cpp  CMakeLists.txt  EvenNumb.cpp  GCD.cpp  MinString.cpp  ProdPrice.cpp  QuadEquation.cpp  Sandbox.cpp  fPos.cpp
White_belt/Week_2/: Anagrams.cpp  AverageTemp.cpp  BusSchedule.cpp  CMakeLists.txt  CountriesMap.cpp  Fatorial.cpp  IsPalindrom.cpp  MapValToSet.cpp  MonthyTasks.cpp  MoveStrings.cpp  PalindrFilter.cpp  Queue.cpp  Reverse.cpp  ReverseConst.cpp  RouteSetToBus.cpp  RouteToBus.cpp  Sandbox.cpp  Synonims.cpp  UniqueStrsInSet.cpp  UpdateIfGreater.cpp
White_belt/Week_3/: CMakeLists.txt  Incognizable.cpp  ModuleSort.cpp  NameHistory1.cpp  NameHistory2.cpp  NameHistory3.cpp  RegisterIndepSort.cpp  ReversibleString.cpp  Sandbox.cpp  SortedStrings.cpp
White_belt/Week_4/: AskServer.cpp  CMakeLists.txt  Calculator.cpp  EnsureEqual.cpp  InvertFunc.cpp  InvertFuncMultDiv.cpp  LearningFiles1_2.cpp  LectureTitle.cpp  Rational.cpp  Sandbox.cpp  SetPrec.cpp  StudentsList.cpp  Table.cpp  output.txt
White_belt/Week_4/Rational_tasks/: Part_1.cpp
White_belt/Week_5/: CMakeLists.txt  DB.cpp
White_belt/Week_5/Task_templ/: project_template.cpp
YellowBelt/: CMakeLists.txt
YellowBelt/Week_1/: Sandbox.cpp
YellowBelt/Week_2/: CMakeLists.txt
YellowBelt/Week_4/: CMakeLists.txt
YellowBelt/Week_5/: CMakeLists.txt
Yellow_belt/: CMakeLists.txt
Yellow_belt/TestRunner/: CMakeLists.txt  TestRunner.cpp  TestRunner.h
Yellow_belt/Week_1/: AverageTemp.cpp  BlocksWeight.cpp  CMakeLists.txt  ElementRef.cpp  RegionBase.cpp  Sandbox.cpp  SqrForContainers.cpp  TaskTracker.cpp  TaskTrackerAuthors.cpp  TaskTracker_Bullshit.cpp  TaskTracker_Correct.cpp  TemplateOutput.cpp  White_belt_check.cpp
Yellow_belt/Week_2/: AssertBasedUT.cpp  AuthorsBusSchedule.cpp  AuthorsUTFramework.cpp  BusScheduleDecomp.cpp  CMakeLists.txt  IsPalindromUT.cpp  PersonUT.cpp  QuadEquationDecomp.cpp  QuadEquationUT.cpp  RationalUT.cpp  Sandbox.cpp  SynonymsUT.cpp
Yellow_belt/Week_3/: CMakeLists.txt  MainTest.cpp  PhoneNumber.cpp  PhoneNumber.h  PhoneNumberMain.cpp  Rectangle.cpp  Rectangle.h  SumReverseSort.cpp  SumReverseSort.h  Synonyms.cpp  SynonymsMain.cpp  SynonymsUT.h  TestRunner.h
Yellow_belt/Week_3/phone_number/: PhoneNumberUT.cpp  PhoneNumberUT.h
Yellow_belt/Week_3/program_decomp/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
Yellow_belt/Week_3/synonyms/: Synonyms.h  SynonymsUT.cpp  SynonymsUT.h
Yellow_belt/Week_4/: BuildExpression1.cpp  BuildExpression2.cpp  CMakeLists.txt  FindGreaterElements.cpp  FindNearestElement.cpp  FindStartsWithChar.cpp  FindStartsWithString.cpp  IteratorsIntro.cpp  MergeSort2.cpp  MergeSort3.cpp  NameHistory4.cpp  PrintPermutaions.cpp  PrintStats.cpp  PrintVectorPart.cpp  RepeatsRemovement.cpp  SplitIntoWords.cpp
Yellow_belt/Week_4/lectures/: IteratorInsert.cpp  IteratorsInAlgs.cpp  IteratorsIntro.cpp  MistakesAnalysis.cpp  SearchingAlgs.cpp  StackQueueDEQ.cpp
Yellow_belt/Week_5/: CMakeLists.txt  Figures.cpp  InheritanceDIY.cpp  Notifiers.cpp  RefactoredCode.cpp  Society.cpp
Yellow_belt/Week_5/lectures/: InheritanceIntro.cpp  InheritanceStructure.cpp  Parser.cpp  ParserInit.cpp  Polymorphism.cpp
Yellow_belt/Week_6/: CMakeLists.txt
Yellow_belt/Week_6_FinalProject/: CMakeLists.txt  DB.cpp  FinalProject.rar  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.cpp  token.cpp  token.h
