project(Week_1)

add_executable(BinPres BinPres.cpp)

add_executable(GCD GCD.cpp)
add_executable(fPos fPos.cpp)
add_executable(EvenNumb EvenNumb.cpp)
add_executable(ProdPrice ProdPrice.cpp)
add_executable(A_div_B A_div_B.cpp)
add_executable(Sandbox Sandbox.cpp)
add_executable(QuadEquation QuadEquation.cpp)
add_executable(A_plus_B A_plus_B.cpp)
add_executable(MinString MinString.cpp)