project(Week_2)


add_executable(UniqueStrsInSet UniqueStrsInSet.cpp)
add_executable(MonthyTasks MonthyTasks.cpp)
add_executable(Queue Queue.cpp)
add_executable(GreaterThanAverageTemp GreaterThanAverageTemp.cpp)
add_executable(ReverseConst ReverseConst.cpp)
add_executable(Reverse Reverse.cpp)
add_executable(MoveStrings MoveStrings.cpp)
add_executable(UpdateIfGreater UpdateIfGreater.cpp)
add_executable(PalindrFilter PalindrFilter.cpp)
add_executable(IsPalindrom IsPalindrom.cpp)
add_executable(Factorial Fatorial.cpp)
add_executable(Anagrams Anagrams.cpp)
add_executable(RouteSetToBus RouteSetToBus.cpp)
add_executable(Synonimths Synonims.cpp)
add_executable(MapValToSet MapValToSet.cpp)
add_executable(RouteToBus RouteToBus.cpp)
add_executable(BusSchedule BusSchedule.cpp)
add_executable(CountriesMap CountriesMap.cpp)
add_executable(Sandbox Sandbox.cpp)