project(Week_4)

add_executable(Sandbox Sandbox.cpp)
add_executable(InvertFunc InvertFunc.cpp)
add_executable(EnsureEqual EnsureEqual.cpp)
add_executable(Calculator Calculator.cpp)
add_executable(AskServer AskServer.cpp)
add_executable(Rational Rational.cpp)
add_executable(StudentsList StudentsList.cpp)
add_executable(Table Table.cpp)
add_executable(SetPrec SetPrec.cpp)
add_executable(LearningFiles1_2 LearningFiles1_2.cpp)
add_executable(InvertFuncMultDiv InvertFuncMultDiv.cpp)
add_executable(LectureTitle LectureTitle.cpp)
