project(Week_2)

set(CMAKE_CXX_STANDARD 17)
set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Werror --std=c++1z")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

add_executable(Sandbox_2 Sandbox.cpp)
add_executable(BusScheduleDecomp_2 BusScheduleDecomp.cpp)
add_executable(AuthorsBusSchedule_2 AuthorsBusSchedule.cpp)
add_executable(QuadEquationUT_2 QuadEquationUT.cpp)
add_executable(AuthorsUTFramework_2 AuthorsUTFramework.cpp)
add_executable(SynonymsUT_2 SynonymsUT.cpp)
add_executable(AssertBasedUT_2 AssertBasedUT.cpp)
add_executable(IsPalindromUT_2 IsPalindromUT.cpp)
add_executable(RationalUT_2 RationalUT.cpp)
add_executable(PersonUT_2 PersonUT.cpp)
add_executable(QuadEquationDecomp_2  QuadEquationDecomp.cpp)