project(Week_4)

set(CMAKE_CXX_STANDARD 17)
set(GCC_COVERAGE_COMPILE_FLAGS "-Wall --std=c++1z")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

add_executable(PrintVectorPart PrintVectorPart.cpp)
add_executable(FindGreaterElements FindGreaterElements.cpp)
add_executable(SplitIntoWords SplitIntoWords.cpp)
add_executable(IteratorsIntro lectures/IteratorsIntro.cpp)
add_executable(IteratorsInAlgs lectures/IteratorsInAlgs.cpp)
add_executable(IteratorInsert lectures/IteratorInsert.cpp)
add_executable(RepeatsRemovement RepeatsRemovement.cpp)
add_executable(PrintPermutaions PrintPermutaions.cpp)
add_executable(PrintStats PrintStats.cpp)
add_executable(MergeSort2 MergeSort2.cpp)
add_executable(MergeSort3 MergeSort3.cpp)
add_executable(StackQueueDEQ lectures/StackQueueDEQ.cpp)
add_executable(SearchingAlgs lectures/SearchingAlgs.cpp)
add_executable(MistakesAnalysis lectures/MistakesAnalysis.cpp)
add_executable(FindNearestElement FindNearestElement.cpp)
add_executable(BuildExpression1 BuildExpression1.cpp)
add_executable(BuildExpression2 BuildExpression2.cpp)
add_executable(NameHistory4 NameHistory4.cpp)
add_executable(FindStartsWithChar FindStartsWithChar.cpp)
add_executable(FindStartsWithString FindStartsWithString.cpp)

target_link_libraries(FindStartsWithString TestRunner)
