project(Week_5)

set(CMAKE_CXX_STANDARD 17)
set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Werror --std=c++1z")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

add_executable(InheritanceIntro lectures/InheritanceIntro.cpp)
add_executable(InheritanceStructure lectures/InheritanceStructure.cpp)
add_executable(InheritanceDIY InheritanceDIY.cpp)
add_executable(Polymorphism lectures/Polymorphism.cpp)
add_executable(ParserInit lectures/ParserInit.cpp)
add_executable(Parse lectures/Parser.cpp)
add_executable(Notifiers Notifiers.cpp)
add_executable(Figures Figures.cpp)
add_executable(Society Society.cpp)
add_executable(RefactoredCode RefactoredCode.cpp)