
add_executable(0_compl_intro lectures/0_compl_intro.cpp)
target_link_libraries(0_compl_intro profile)

add_executable(1_NH_with_notes lectures/1_NH_with_notes.cpp)
add_executable(2_amortize_constant lectures/2_amortize_constant.cpp)

add_executable(express express.cpp)
add_executable(e_book e_book.cpp)
add_executable(booking booking.cpp)