
add_executable(w2-0_compl_intro lectures/0_compl_intro.cpp)
target_link_libraries(w2-0_compl_intro profile)

add_executable(w2-1_NH_with_notes lectures/1_NH_with_notes.cpp)
add_executable(w2-2_amortize_constant lectures/2_amortize_constant.cpp)

add_executable(w2-express express.cpp)
add_executable(w2-e_book e_book.cpp)
add_executable(w2-booking booking.cpp)